# 1141_DataScience

./: .gitignore  EVALUATION_METRICS.md  EXPERIMENT_GUIDE.md  EXPERIMENT_ROADMAP.md  METRICS_SUMMARY.txt  PPTX.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  Report.md  VISUAL_SUMMARY.txt  main.py  pyproject.toml  recommendation_system_with_cf_using_knn.ipynb  recommendation_system_with_cf_using_knn.py  test_refactoring.py
configs/: experiments.json
log/: .gitignore  BIAS_001.json  BIAS_002.json  BIAS_003.json  DS_001.json  DS_002.json  DS_003.json  DS_004.json  FILTER_001.json  FILTER_002.json  FILTER_003.json  FILTER_004.json  FILTER_005.json  FILTER_006.json  KNN_001.json  KNN_002.json  KNN_003.json  KNN_004.json  KNN_005.json  KNN_006.json  KNN_007.json  KNN_BASELINE_001.json  KNN_BASELINE_002.json  KNN_BASELINE_003.json  KNN_BASELINE_004.json  KNN_BASELINE_005.json  KNN_BASELINE_006.json  KNN_BASELINE_007.json  KNN_BASELINE_008.json  KNN_BASELINE_009.json  KNN_BASELINE_010.json  OPT_001.json  OPT_002.json  OPT_003.json  OPT_004.json  OPT_005.json  OPT_006.json  OPT_007.json  OPT_008.json  OPT_009.json  (+258 more)
reports/: README.md  best_configs.json  dataset_statistics_full.json  summary.md
run/: BIAS_001.py  BIAS_002.py  BIAS_003.py  DS_001.py  DS_002.py  DS_003.py  DS_004.py  FILTER_001.py  FILTER_002.py  FILTER_003.py  FILTER_004.py  FILTER_005.py  FILTER_006.py  KNN_001.py  KNN_002.py  KNN_003.py  KNN_004.py  KNN_005.py  KNN_006.py  KNN_007.py  OPT_001.py  OPT_003.py  SVD_001.py  SVD_002.py  SVD_003.py  SVD_004.py  SVD_005.py  SVD_006.py  SVD_007.py  (+42 more)
(+35 files in other folders)
