[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "recommendation_system"
version = "0.0.1"
requires-python = ">=3.12, <3.13"
description = "recommendation_system"

authors = [
    { name = "Xuan‑You Lin", email = "a0985821880@gmail.com" }
]

dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "nest-asyncio>=1.6.0",
    "jupyterlab-widgets>=3.0.16",

    "kagglehub>=0.3.13",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "scikit-learn>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/"]
